margin change, add icon for data type identifier

--- a/js-method-guide/src/App.css
+++ b/js-method-guide/src/App.css
@@ -52,10 +52,11 @@ body {
   border-radius: 20px;
   background-color: rgb(80, 71, 71);
   padding: 10px 3% 25px;
-  margin: 20px 4%;
+  margin: 25px 4%;
   color: white;
   float: left;
   height: 300px;
+  position:relative;
 }
 
 .method-card-active {
@@ -68,6 +69,17 @@ body {
   left: 0;
   top: 0;
   height: 100vh;
+}
+
+.card-icon {
+  font-size: 20px;
+  padding: 15px 20px;
+  font-weight: 800;
+  background: #b57b7b;
+  position: absolute;
+  top: -25px;
+  border-radius: 10px;
+  ;
 }
 
 .close-button {
