--- a/js-method-guide/src/App.css
+++ b/js-method-guide/src/App.css
@@ -69,6 +69,7 @@ body {
   left: 0;
   top: 0;
   height: 100vh;
+  z-index: 2;
 }
 
 .card-icon {
@@ -99,7 +100,7 @@ body {
   cursor: pointer;
 }
 
-.hide-close-button {
+.hide {
   display: none;
 }
 
