nav layout with styling

--- a/js-method-guide/src/App.css
+++ b/js-method-guide/src/App.css
@@ -8,10 +8,6 @@ body {
   width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,6 +31,29 @@ body {
   color: white;
   float: left;
 }
+
+.nav-wrap h3 {
+  margin-right: 20px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.nav-wrap ul {
+  padding: 0;
+}
+
+.nav-wrap  ul  li {
+  padding: 10px 20px;
+  list-style: none;
+  width: 100%;
+  box-sizing: border-box;
+  background: #999;
+  margin-bottom: 1px;
+}
+
+.nav-wrap > ul > li {
+  background: rgba(102, 145, 118, 0.63);
+}
+
 
 .display-wrap {
   width: 80%;
@@ -80,7 +99,6 @@ body {
   position: absolute;
   top: -25px;
   border-radius: 10px;
-  ;
 }
 
 .close-button {
@@ -117,3 +135,4 @@ body {
   margin-right: 6%;
   color:#555;
 }
+
